logs/Slang/generated/hdlconv/hdlconvertor_crc_functions.sv.log
name: hdlconvertor_crc_functions
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/others/crc_functions.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/others/crc_functions.sv:5:41: error: dimension requires a constant range
function byte calc_crc(byte unsigned cmd[]);
                                        ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/others/crc_functions.sv:28:70: error: dimension requires a constant range
function automatic bit[31:0] genCRC32(input bit [7:0] databyte_stream[]);
                                                                     ^~
